reassess getFlagType and other minor fixes